Prevent line wrapping within holding space welcome banner.
On small screens there is a chance that the holding space welcome
banner text may be too long to fit nicely within welcome banner bounds.
As a temporary workaround, prevent line wrapping within the holding
space welcome banner and ellipsize text that overflows.

(cherry picked from commit e92f71b399e9ee58c02e94c4704978d6c77c636e)

Bug: 1170926
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2649328
Commit-Queue: David Black <dmblack@google.com>
Cr-Original-Commit-Position: refs/heads/master@{#847395}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2651207
Cr-Commit-Position: refs/branch-heads/4389@{#301}
Cr-Branched-From: 9251c5db2b6d5a59fe4eac7aafa5fed37c139bb7-refs/heads/master@{#843830}

--- a/ui/file_manager/file_manager/foreground/css/holding_space_welcome.css
+++ b/ui/file_manager/file_manager/foreground/css/holding_space_welcome.css
@@ -51,11 +51,15 @@
 
 .holding-space-welcome .holding-space-welcome-title {
   margin-bottom: 2px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .holding-space-welcome .holding-space-welcome-text {
-  align-items: center;
-  display: inline-flex;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .holding-space-welcome .holding-space-welcome-text span.icon {
@@ -65,8 +69,7 @@
   -webkit-mask-size: 100%;
   background-color: var(--cros-text-color-primary);
   display: inline-block;
-  flex: 0 0 auto;
-  height: 13px;
+  height: 100%;
   width: 13px;
 }
 
